--- a/WebApp_Wls/Views/Musicas/Index.cshtml
+++ b/WebApp_Wls/Views/Musicas/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<WebApp_Wls.Models.Musica>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Músicas";
 }
 
 <h2>Index</h2>
